# didip_handwriting_datasets

./: .gitignore  README.md  character_groups.py  collate_xml_to_img.sh  datadir2csv.sh  pagexml2json.py  pyproject.toml  requirements.txt  setup.py  tei_to_collated_lines.py  transcription_cleanup.py
datasets/: funsd.py  iam.py  monasterium.py
didip_handwriting_datasets/: alphabet.py  character_classes.py  charters.py  charters_htr.py  charters_seg.py  funsd.py  iam.py  maskutils.py  monasterium.py  monasterium_alphabet.tsv  seglib.py  vizutils.py  weighted_sample.py  xml_utils.py  xmlutils.py
didip_handwriting_datasets/lm_util/: __init__.py
doc/: conf.py  index.rst
doc/_static/: custom.css
funsd/: funsd_dataset.py
handwriting_datasets/: __init__.py  alphabet.py  download_utils.py  funsd.py  iam.py  monasterium.py
handwriting_datasets/lm_util/: visual.py
iam/: iam_handwriting_dataset.py
lm_util/: argv.py  colored_strings.py  encoder.py
scripts/: datadir2tsv.sh  pagexml2json.py
tests/: test_alphabet.py  test_charters.py  test_funsd.py  test_iam.py  test_monasterium.py
tests/data/: 20_ms.tsv  alphabet_many_to_one_prototype.tsv  alphabet_many_to_one_repr.tsv  alphabet_one_to_one_repr_with_nullchar.tsv  alphabet_one_to_one_repr_without_nullchar.tsv  lol_many_to_one_shuffled_0.tsv  lol_many_to_one_shuffled_1.tsv  lol_many_to_one_shuffled_2.tsv  lol_many_to_one_shuffled_3.tsv  lol_many_to_one_shuffled_4.tsv  lol_many_to_one_shuffled_5.tsv  lol_many_to_one_shuffled_6.tsv  lol_many_to_one_shuffled_7.tsv  lol_many_to_one_shuffled_8.tsv  (+4 more)
(+4 files in other folders)
