[project]
name = "didip_handwriting_datasets"
version = "1.0"
authors = [
  { name="Nicolas Renet", email="nprenet@gmail.com" },
]
description = "Handling HTR datasets: download, unpack, transform."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [ "defusedxml", "tqdm", "torchvision", "gdown" ]

[project.urls]
Homepage = "https://github.com/Didip-eu/didip_handwriting_datasets"

#[scripts]
#pageconvert = pagexml2json:main



[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
